--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "lib",
     "jsx": "react",
     "lib": [
       "es2017",
