--- a/client/package.json
+++ b/client/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "typescript-boilerplate",
-  "description": "Boilerplate for TypeScript project.",
-  "version": "1.0.0",
+  "name": "peercast-yp-proxy-client",
+  "description": "Client for peercast-yp-proxy.",
+  "version": "0.1.0",
   "bugs": {
-    "url": "https://github.com/progre/typescript-boilerplate/issues"
+    "url": "https://github.com/progre/peercast-yp-proxy/issues"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0"
+    "debug": "^2.6.3",
+    "rxjs": "^5.3.0",
+    "socket.io-client": "^1.7.3"
   },
   "devDependencies": {
+    "@types/debug": "^0.0.29",
     "@types/empower": "^1.2.30",
     "@types/mocha": "^2.2.40",
     "@types/node": "^7.0.12",
     "@types/power-assert": "^1.4.29",
     "@types/power-assert-formatter": "^1.4.28",
+    "@types/socket.io-client": "^1.4.29",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-espower": "^2.3.2",
@@ -35,13 +39,13 @@
     "lib",
     "LICENSE"
   ],
-  "homepage": "https://github.com/progre/typescript-boilerplate#readme",
+  "homepage": "https://github.com/progre/peercast-yp-proxy#readme",
   "license": "GPL-3.0",
   "main": "lib/index.js",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/progre/typescript-boilerplate.git"
+    "url": "git+https://github.com/progre/peercast-yp-proxy.git"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
