--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,1 +1,23 @@
-../server/tsconfig.json
+{
+  "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "lib",
+    "jsx": "react",
+    "lib": [
+      "es2017",
+      "dom",
+      "dom.iterable"
+    ],
+    "module": "commonjs",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "skipLibCheck": true,
+    "strictNullChecks": true,
+    "stripInternal": true,
+    "target": "es2017"
+  },
+  "exclude": [
+    "node_modules",
+    "typings"
+  ]
+}
