--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,16 @@
 {
   "name": "peercast-yp-proxy",
   "description": "Proxy server for PeerCast YellowPages.",
-  "version": "0.1.0",
+  "version": "0.1.1-alpha",
   "bugs": {
     "url": "https://github.com/progre/peercast-yp-proxy/issues"
   },
   "dependencies": {
+    "@types/object-hash": "^0.5.28",
     "babel-polyfill": "^6.23.0",
     "debug": "^2.6.3",
     "node-fetch": "^1.6.3",
+    "object-hash": "^1.1.8",
     "peercast-yp-channels-parser": "^0.0.5",
     "rxjs": "^5.3.0",
     "socket.io": "^1.7.3"
