fix: safe build on windows

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "typescript": "^2.2.2"
   },
   "scripts": {
-    "postinstall": "concurrently \"npm -prefix client install\" \"npm -prefix server install\"",
     "build": "concurrently \"npm -prefix client run build\" \"npm -prefix server run build\"",
-    "dev": "concurrently \"npm -prefix client run watch\" \"npm -prefix server run watch\""
+    "dev": "concurrently \"npm -prefix client run watch\" \"npm -prefix server run watch\"",
+    "subproject-install": "concurrently \"npm -prefix client install\" \"npm -prefix server install\""
   }
 }
