--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ sudo: false
 language: node_js
 node_js: 6
 install:
-  - npm subproject-install
+  - npm run subproject-install
 script:
   - yarn run build
