--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 sudo: false
 language: node_js
 node_js: 6
-post_install:
+before_script:
   - npm run subproject-install
 script:
   - yarn run build
