--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,8 @@
     "object-hash": "^1.1.8",
     "peercast-yp-channels-parser": "^0.0.5",
     "rxjs": "^5.3.0",
-    "socket.io": "^1.7.3"
+    "socket.io": "^1.7.3",
+    "tree-network": "^0.2.0"
   },
   "devDependencies": {
     "@types/debug": "^0.0.29",
